<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="275dp"
            android:layout_height="75dp"
            android:textSize="30dp"
            android:text="@string/fight"
            android:id="@+id/button_fight"
            />

        <Button
            android:layout_width="275dp"
            android:layout_height="75dp"
            android:textSize="30dp"
            android:text="@string/bag2"
            android:id="@+id/button_bag"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:textSize="30dp"
        android:id="@+id/battle_text"/>

    <Button
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:textSize="30dp"
        android:text="@string/run_away"
        android:id="@+id/button_run"/>

    </LinearLayout>

</LinearLayout>