<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PokemonName"
            android:textSize="30sp"
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon"
            android:layout_weight="9"/>

        <TextView
            android:id="@+id/PokemonLevel"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:textSize="15sp"
            android:layout_marginRight="10dp"/>


        <ProgressBar
            android:id="@+id/PokemonHealthBar"
            android:layout_width="150dp"
            android:layout_height="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
        />

    </LinearLayout>

</LinearLayout>