<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_winner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cwpila14.finalproject.GameStuff.WinnerActivity"
    android:background="@drawable/yellowback">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@drawable/agatha"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/bruno"
            android:id="@+id/imageView8" />

        <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@drawable/lance"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@drawable/lorelei"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="60dp"
        android:layout_marginBottom="121dp"
        android:id="@+id/textView5"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/exit"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/exitGameButton" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/winner_message"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2" />


</RelativeLayout>
